Bugfix/ddp 7195 (#961)
* Fixed some layout issues and bugs

--- a/ddp-workspace/projects/ddp-singular/src/app/components/activities-list/activities-list.component.scss
+++ b/ddp-workspace/projects/ddp-singular/src/app/components/activities-list/activities-list.component.scss
@@ -51,3 +51,10 @@ button {
     padding: 8px 24px;
   }
 }
+
+.actions-wrapper {
+  display: flex;
+  & button:not(:last-child) {
+    margin-right: 5px;
+  }
+}
