--- a/ddp-workspace/projects/ddp-singular/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_common.scss
@@ -7,6 +7,7 @@
   font-family: 'Spartan-Regular', sans-serif;
 }
 
+
 html {
   height: 100%;
   font-size: 20px;
@@ -51,6 +52,8 @@ ul li {
 
 a {
   text-decoration: none!important;
+  border-bottom: 1px solid $__purple;
+  padding-bottom: 1px;
 }
 
 h1 {
@@ -94,4 +97,13 @@ a {
 .tooltip {
   opacity: unset;
   position: unset;
+}
+
+.drop-block-text {
+  font-size: 15px;
+}
+.container {
+  &:before, &:after {
+    content: unset;
+  }
 }
