--- a/ddp-workspace/projects/ddp-singular/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_typography.scss
@@ -15,8 +15,8 @@ h4 {
   line-height: 42px;
 }
 
-h1 {
-  margin: 2.1rem 0 1.68rem 0;
+h1, h2 {
+  margin: 50px 0 20px 0;
 }
 
 h1.Title {
